2011-02-23  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c: 
	[ 3175770 ] execQuery returns multiple instances of same object

2011-02-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* result.c: 
	[ 3185178 ] Wrong classname for returned instances from execQuery

2011-02-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c:
	[ 3172080 ] deliverIndication does not check for matching FROM classes

2011-02-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 3162016 ] sfcbd Segmentation fault in cleanupCimXmlRequest

2010-12-23  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* mofpp.c:
	[ 3054618 ] mofpp is overaggressive when detecting comments

2010-12-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c:
	[ 3130727 ] CMPIPropertyMIFT.setProperty() missing objectpath keys

2010-11-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* queryLexer.l, test/TestProviders/cmpiTestMethodProvider.c,
	[ 3122725 ] Cleanup warnings in queryLexer and test provider

2010-11-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* msgqueue.c:
	[ 3109469 ] Potential Buffer Overflow in msgqueue.c:localConnectServer()
	(patch by Josef Moellers)

2010-11-15  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3087577 ] Provider MI accessed before finished initializing

2010-11-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3097310 ] localConnect in cimcClientSfcbLocal.c accesses free'd memory

	* control.c, msgqueue.c, sfcb.cfg.pre.in:
	[ 3101154 ] Daemon clients failed SfcbLocal connect due to permission
	(patch by Chris Poblete)	

2010-11-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3101148 ] SfcbLocal method parameter type conversion and validation
	(patch by Chris Poblete)

	* providerDrv.c:
	[ 3101155 ] Failed to load provider libraries due to symbol conflicts
	(patch by Chris Poblete)
