@@ -9,6 +9,7 @@ Bugs fixed:
 - 3172080 deliverIndication does not check for matching FROM classes
 - 3185178 Wrong classname for returned instances from execQuery
 - 3175770 execQuery returns multiple instances of same object
+- 3203290 Basic Auth Should Consider Expired Passwords
 
 Changes in 1.3.10
 =================
